# image-tagging-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  image-tagging-api.service  pyproject.toml
src/image_tagging_api/: __init__.py  config.py  main.py  models.py
src/image_tagging_api/providers/: base.py  healthcheck.py  transcription.py  vision.py
tests/: test_api.py  test_audio_api.py  test_config.py  test_providers.py  test_startup_checks.py  test_startup_healthcheck.py  test_transcription.py
